--- a/crates/storage/mdbx-viz/src/index.html
+++ b/crates/storage/mdbx-viz/src/index.html
@@ -54,6 +54,12 @@ tr.tbl-row.active td{background:#1c2128;outline:1px solid #58a6ff}
 .tree-card .tree-stat{color:#8b949e;margin-top:2px}
 .tree-card .tree-bar{display:flex;gap:1px;margin-top:3px;height:6px;border-radius:2px;overflow:hidden}
 .tree-card .tree-seg{height:100%}
+.cache-stat{display:flex;justify-content:space-between;align-items:center;font-size:10px;padding:2px 0}
+.cache-bar{height:4px;border-radius:2px;background:#21262d;flex:1;margin:0 6px;position:relative;overflow:hidden}
+.cache-fill{height:100%;border-radius:2px;background:#4ade80;position:absolute;left:0;top:0}
+.cache-pct{color:#4ade80;font-weight:600;min-width:36px;text-align:right}
+.cache-label{color:#8b949e;min-width:80px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
+.fault-cnt{color:#d946ef;font-size:10px;margin-left:4px}
 </style>
 </head>
 <body>
@@ -98,6 +104,7 @@ tr.tbl-row.active td{background:#1c2128;outline:1px solid #58a6ff}
       <label><input type="checkbox" id="chk-trails"> Trails</label>
       <label><input type="checkbox" id="chk-heatmap"> Heatmap</label>
       <label><input type="checkbox" id="chk-flame"> Timeline</label>
+      <label><input type="checkbox" id="chk-cache"> Page Cache</label>
     </div>
     <div>
       <label>Fade: <input type="range" id="fade-slider" min="200" max="8000" value="2000" step="100">
@@ -114,6 +121,8 @@ tr.tbl-row.active td{background:#1c2128;outline:1px solid #58a6ff}
   <div id="sparklines"></div>
   <h2 style="margin-top:12px">B-Tree Structure</h2>
   <div id="tree-info"></div>
+  <h2 style="margin-top:12px">Page Cache <span id="cache-total" style="color:#8b949e;font-weight:400;font-size:11px"></span></h2>
+  <div id="cache-stats"></div>
 </div>
 <div id="tooltip">
   <div class="tt-row"><div class="tt-swatch" id="tt-swatch"></div><div class="tt-name" id="tt-name"></div></div>
@@ -135,6 +144,7 @@ let sR=true,sW=true,sF=true,fW=false,showTrails=false,trailW=1.5;
 const TRAIL_CAP=4096;let trails=[];
 const TRC={1:"60,130,246",2:"255,80,80",3:"234,179,8"};
 let hmMode=false,hmCounts=null;
+let cacheMode=false,resMap=null,faultCounts={};
 let showFlame=false;const FLAME_SECS=120;let flameData={},flameHead=0;
 const SPARK_SECS=60;let sparkData={},sparkAccum={};
 const cv=document.getElementById("map"),cx=cv.getContext("2d"),wr=document.getElementById("canvas-wrap");
@@ -151,6 +161,7 @@ function growTo(newNP){
   const nOp=new Uint8Array(newNP);nOp.set(lOp);lOp=nOp;
   const nTs=new Float64Array(newNP);nTs.set(lTs);lTs=nTs;
   if(hmCounts){const nHm=new Uint32Array(newNP);nHm.set(hmCounts);hmCounts=nHm}
+  if(resMap){const nRm=new Uint8Array(newNP);nRm.set(resMap);resMap=nRm}
   NP=newNP;GR=Math.ceil(NP/GC);
   iD=null;oC=null;
 }
@@ -167,9 +178,15 @@ function hmColor(cnt){
   return[Math.round(a[0]+(b[0]-a[0])*f),Math.round(a[1]+(b[1]-a[1])*f),Math.round(a[2]+(b[2]-a[2])*f)];
 }
 function pC(pg,gy,flt,dA,dB,now){
+  const c=pCInner(pg,gy,flt,dA,dB,now);
+  if(!c)return null;
+  if(cacheMode&&resMap&&pg<resMap.length&&!resMap[pg])return[Math.round(c[0]*0.25),Math.round(c[1]*0.25),Math.round(c[2]*0.25)];
+  return c;
+}
+function pCInner(pg,gy,flt,dA,dB,now){
   if(pg<0||pg>=NP)return null;const ow=oMap[pg];
   let c;if(flt&&!sel.has(ow))c=(gy&1)?dA:dB;else c=PAL[ow]||PAL[255];
-  if(hmMode&&hmCounts){const hc=hmColor(hmCounts[pg]);if(hc)return hc;return c}
+  if(hmMode&&hmCounts){if(flt&&!sel.has(ow))return c;const hc=hmColor(hmCounts[pg]);if(hc)return hc;return c}
   const op=lOp[pg];if(!op)return c;
   if((op===1&&!sR)||(op===2&&!sW)||(op===3&&!sF))return c;
   const age=now-lTs[pg];if(age>=FADE){lOp[pg]=0;return c}
@@ -274,6 +291,7 @@ cv.addEventListener("pointermove",e=>{
   ttNm.textContent=`Page ${pg.toLocaleString()} \u2014 ${inf?inf.name:"idx "+ow}${ex}`;
   let dtxt=inf?`${inf.pages.toLocaleString()} pages, ${inf.pct}%`:"";
   if(hmMode&&hmCounts&&pg<hmCounts.length)dtxt+=(dtxt?" \u00b7 ":"")+hmCounts[pg].toLocaleString()+" hits";
+  if(cacheMode&&resMap&&pg<resMap.length)dtxt+=(dtxt?" \u00b7 ":"")+(resMap[pg]?"cached":"NOT CACHED");
   ttDt.textContent=dtxt;
   tt.style.display="block";tt.style.left=(e.clientX+14)+"px";tt.style.top=(e.clientY+14)+"px";
 });
@@ -287,6 +305,7 @@ document.getElementById("fade-slider").addEventListener("input",e=>{FADE=parseIn
 document.getElementById("chk-trails").addEventListener("change",e=>{showTrails=e.target.checked;if(!showTrails)trails=[];sched()});
 document.getElementById("trail-width").addEventListener("input",e=>{trailW=parseFloat(e.target.value);document.getElementById("trail-w-val").textContent=trailW.toFixed(1);sched()});
 document.getElementById("chk-heatmap").addEventListener("change",e=>{hmMode=e.target.checked;sched()});
+document.getElementById("chk-cache").addEventListener("change",e=>{cacheMode=e.target.checked;sched()});
 document.getElementById("chk-flame").addEventListener("change",e=>{
   showFlame=e.target.checked;const fw=document.getElementById("flame-wrap");
   const at=DBIS.filter(d=>d.pages>0);fw.style.height=showFlame?Math.min(at.length*8+24,200)+"px":"0";
@@ -311,7 +330,9 @@ function connectWS(){
       if(pg>=maxPg)maxPg=pg+1;
       if(pg>=NP){if(maxPg>NP)growTo(maxPg);if(pg>=NP)continue}cnt++;
       if(op===1)cntR++;else if(op===2)cntW++;else if(op===3)cntF++;
-      if(hmCounts)hmCounts[pg]++;
+      if(cacheMode&&resMap&&op===1&&pg<resMap.length&&!resMap[pg]){faultCounts[dbi]=(faultCounts[dbi]||0)+1}
+             if(resMap&&pg<resMap.length&&op!==3)resMap[pg]=1;
+             if(hmCounts)hmCounts[pg]++;
       if(sparkAccum[dbi]!==undefined)sparkAccum[dbi]++;
       const prev=lOp[pg],prevLive=prev&&(now-lTs[pg])<FADE;
       if(!prevLive||op>=prev){lOp[pg]=op;lTs[pg]=now}
@@ -417,6 +438,59 @@ function buildTreeInfo(info){
     el.appendChild(card);
   });
 }
+function connectResidencyWS(){
+  const ws=new WebSocket(`${location.protocol==="https:"?"wss:":"ws:"}//${location.host}/ws_residency`);
+  ws.binaryType="arraybuffer";
+  ws.onclose=()=>setTimeout(connectResidencyWS,3000);
+  ws.onerror=()=>ws.close();
+  ws.onmessage=msg=>{
+    if(!msg.data||msg.data.byteLength<1)return;
+    const v=new DataView(msg.data);
+    const msgType=v.getUint8(0);
+    if(msgType===0){
+      if(!resMap||resMap.length!==msg.data.byteLength-1)resMap=new Uint8Array(msg.data.byteLength-1);
+      const src=new Uint8Array(msg.data,1);
+      resMap.set(src);
+      updateCacheStats();
+      if(cacheMode)sched();
+    }else if(msgType===1){
+      if(!resMap)return;
+      const spanCount=v.getUint32(1,true);
+      let off=5;
+      for(let s=0;s<spanCount;s++){
+        const start=v.getUint32(off,true);off+=4;
+        const len=v.getUint32(off,true);off+=4;
+        const state=v.getUint8(off);off+=1;
+        for(let p=start;p<start+len&&p<resMap.length;p++)resMap[p]=state;
+      }
+      updateCacheStats();
+      if(cacheMode)sched();
+    }
+  };
+}
+function updateCacheStats(){
+  if(!resMap||!oMap)return;
+  const el=document.getElementById("cache-stats");if(!el)return;
+  const max_dbi=DBIS.length;
+  const total_per=new Array(max_dbi).fill(0),cached_per=new Array(max_dbi).fill(0);
+  let totalCached=0;const limit=Math.min(resMap.length,NP,oMap.length);
+  for(let i=0;i<limit;i++){
+    const dbi=oMap[i];if(dbi<max_dbi){total_per[dbi]++;if(resMap[i])cached_per[dbi]++}
+    if(resMap[i])totalCached++;
+  }
+  const totalPct=limit>0?(totalCached/limit*100).toFixed(1):"0";
+  document.getElementById("cache-total").textContent=`${totalCached.toLocaleString()}/${limit.toLocaleString()} (${totalPct}%)`;
+  el.innerHTML="";
+  DBIS.forEach(d=>{
+    if(total_per[d.dbi_index]<=0)return;
+    const pct=total_per[d.dbi_index]>0?(cached_per[d.dbi_index]/total_per[d.dbi_index]*100):0;
+    const c=PAL[d.dbi_index]||PAL[255];
+    const fc=faultCounts[d.dbi_index]||0;
+    const row=document.createElement("div");row.className="cache-stat";
+    row.innerHTML=`<span class="cache-label">${d.name}</span><div class="cache-bar"><div class="cache-fill" style="width:${pct.toFixed(1)}%;background:rgb(${c[0]},${c[1]},${c[2]})"></div></div><span class="cache-pct">${pct.toFixed(1)}%</span>${fc>0?`<span class="fault-cnt">${fc.toLocaleString()}f</span>`:""}`;
+    el.appendChild(row);
+  });
+}
 async function init(){
   try{
     const r=await fetch("/api/info"),info=await r.json();NP=info.page_count;PS=info.page_size;
@@ -439,7 +513,7 @@ async function init(){
   let treeInfo=[];
   try{const r=await fetch("/api/tree_info");if(r.ok)treeInfo=await r.json()}catch(e){}
   if(treeInfo.length>0)buildTreeInfo(treeInfo);
-  ldEl.style.display="none";cv.style.display="block";boot();connectWS();
+  ldEl.style.display="none";cv.style.display="block";boot();connectWS();connectResidencyWS();
   setInterval(()=>{
     DBIS.forEach(d=>{
       const v=sparkAccum[d.dbi_index]||0;
